--- a/src/main/webapp/pages/ForgotPassword/ForgotPassword.html
+++ b/src/main/webapp/pages/ForgotPassword/ForgotPassword.html
@@ -2,12 +2,13 @@
     <wm-content name="content1">
         <wm-page-content columnwidth="12" name="page_content1">
             <wm-composite name="composite1">
-                <wm-label class="col-md-3 control-label" name="label1" caption="User Id"></wm-label>
+                <wm-label class="col-md-3 control-label" name="label1" caption="Email"></wm-label>
                 <wm-container class="col-md-9" name="container1">
-                    <wm-text name="userId" type="number"></wm-text>
+                    <wm-text name="Email" type="email" required="true"></wm-text>
                 </wm-container>
             </wm-composite>
-            <wm-button class="btn-default" caption="Reset Password" type="button" margin="unset 0.5em" name="button1" on-click="Variables.sendResetPasswordbyUserID.invoke()"></wm-button>
+            <wm-button class="btn-default" caption="Reset Password" type="button" margin="unset 0.5em" name="button1" on-click="Variables.getUserID.invoke()"></wm-button>
+            <wm-anchor margin="unset 0.5em" name="signup" caption="Click here to signup" hyperlink="https://www.wavemakeronline.com/run-vqs2y8q615/CivicXpress/#/UserCreation" show="false"></wm-anchor>
         </wm-page-content>
     </wm-content>
 </wm-page>
