--- a/src/main/webapp/pages/ResetPassword/ResetPassword.html
+++ b/src/main/webapp/pages/ResetPassword/ResetPassword.html
@@ -1,6 +1,18 @@
-<wm-page data-ng-controller="ResetPasswordPageController" pagetitle="Reset Password"> 
-    <wm-content> 
-        <wm-page-content columnwidth="12"> 
-        </wm-page-content> 
-    </wm-content> 
+<wm-page data-ng-controller="ResetPasswordPageController" pagetitle="Reset Password" name="page1">
+    <wm-content name="content1">
+        <wm-page-content columnwidth="12" name="page_content1">
+            <wm-container name="container3" show="bind:Variables.ValidateToken.dataSet.value">
+                <wm-composite name="composite1">
+                    <wm-label class="col-md-3 control-label" name="label1" caption="New Password"></wm-label>
+                    <wm-container class="col-md-9" name="container1">
+                        <wm-text name="Passwordtxt" placeholder="Enter Password"></wm-text>
+                    </wm-container>
+                </wm-composite>
+                <wm-button class="btn-default" caption="Submit" type="button" margin="unset 0.5em" name="button1"></wm-button>
+            </wm-container>
+            <wm-container name="container4">
+                <wm-label padding="unset 0.5em" name="label3" caption="Token Expire Please contact Admin"></wm-label>
+            </wm-container>
+        </wm-page-content>
+    </wm-content>
 </wm-page>
