--- a/src/main/webapp/pages/ResetPassword/ResetPassword.html
+++ b/src/main/webapp/pages/ResetPassword/ResetPassword.html
@@ -1,7 +1,7 @@
 <wm-page data-ng-controller="ResetPasswordPageController" pagetitle="Reset Password" name="page1">
     <wm-content name="content1">
         <wm-page-content columnwidth="12" name="page_content1">
-            <wm-container name="container3" show="bind:Variables.ValidateToken.dataSet.value">
+            <wm-container name="container3" show="bind:Variables.ValidateToken.dataSet.value == 1">
                 <wm-composite name="composite1">
                     <wm-label class="col-md-3 control-label" name="label1" caption="New Password"></wm-label>
                     <wm-container class="col-md-9" name="container1">
