New files added - [] Files modified - [ForgotPassword.js,ForgotPassword.variables.json,ForgotPassword.html] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/ForgotPassword/ForgotPassword.html
+++ b/src/main/webapp/pages/ForgotPassword/ForgotPassword.html
@@ -1,14 +1,31 @@
 <wm-page data-ng-controller="ForgotPasswordPageController" pagetitle="Forgot Password" name="page1">
     <wm-content name="content1">
         <wm-page-content columnwidth="12" name="page_content1">
-            <wm-composite name="composite1">
-                <wm-label class="col-md-3 control-label" name="label1" caption="Email"></wm-label>
-                <wm-container class="col-md-9" name="container1">
-                    <wm-text name="Email" type="email" required="true"></wm-text>
-                </wm-container>
-            </wm-composite>
-            <wm-button class="btn-default" caption="Reset Password" type="button" margin="unset 0.5em" name="button1" on-click="Variables.getUserID.invoke()"></wm-button>
-            <wm-anchor margin="unset 0.5em" name="signup" caption="Click here to signup" hyperlink="https://www.wavemakeronline.com/run-vqs2y8q615/CivicXpress/#/UserCreation" show="false"></wm-anchor>
+            <wm-layoutgrid name="layoutgrid1">
+                <wm-gridrow name="gridrow1" padding="2em unset">
+                    <wm-gridcolumn columnwidth="3" name="gridcolumn1"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn2" horizontalalign="center">
+                        <wm-picture name="pictureLogo" picturesource="resources/images/imagelists/CX-Logo.png" width="150pt" height="150pt"></wm-picture>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="3" name="gridcolumn5"></wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow2">
+                    <wm-gridcolumn columnwidth="3" name="gridcolumn3"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn4">
+                        <wm-text name="Email" type="email" required="true" placeholder="Your Registered Email"></wm-text>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="3" name="gridcolumn6">
+                        <wm-button class="btn-default" caption="Reset Password" type="button" margin="unset 0.5em" name="button1" on-click="Variables.getUserID.invoke()"></wm-button>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow3" padding="2em unset">
+                    <wm-gridcolumn columnwidth="3" name="gridcolumn7"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn8" horizontalalign="center">
+                        <wm-anchor margin="unset 0.5em" name="signup" caption="Click here to signup" hyperlink="https://www.wavemakeronline.com/run-vqs2y8q615/CivicXpress/#/UserCreation" show="true"></wm-anchor>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="3" name="gridcolumn9"></wm-gridcolumn>
+                </wm-gridrow>
+            </wm-layoutgrid>
         </wm-page-content>
     </wm-content>
 </wm-page>
