New files added - [] Files modified - [CXPasswordResetController.java,CXPasswordResetService.java,servicedef.xml,ResetPassword.html] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/ResetPassword/ResetPassword.html
+++ b/src/main/webapp/pages/ResetPassword/ResetPassword.html
@@ -1,7 +1,7 @@
 <wm-page data-ng-controller="ResetPasswordPageController" pagetitle="Reset Password" name="page1">
     <wm-content name="content1">
         <wm-page-content columnwidth="12" name="page_content1">
-            <wm-container name="container3" show="bind:Variables.ValidateToken.dataSet.value == 1">
+            <wm-container name="container3" show="bind:Variables.ValidateToken.dataSet.value === 1">
                 <wm-composite name="composite1">
                     <wm-label class="col-md-3 control-label" name="label1" caption="New Password"></wm-label>
                     <wm-container class="col-md-9" name="container1">
@@ -10,7 +10,7 @@
                 </wm-composite>
                 <wm-button class="btn-default" caption="Submit" type="button" margin="unset 0.5em" name="button1"></wm-button>
             </wm-container>
-            <wm-container name="container4">
+            <wm-container name="container4" show="bind:Variables.ValidateToken.dataSet.value === 0">
                 <wm-label padding="unset 0.5em" name="label3" caption="Token Expire Please contact Admin"></wm-label>
             </wm-container>
         </wm-page-content>
