New files added - [] Files modified - [ResetPassword.html] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/ResetPassword/ResetPassword.html
+++ b/src/main/webapp/pages/ResetPassword/ResetPassword.html
@@ -8,7 +8,7 @@
                         <wm-text name="Passwordtxt" placeholder="Enter Password"></wm-text>
                     </wm-container>
                 </wm-composite>
-                <wm-button class="btn-default" caption="Submit" type="button" margin="unset 0.5em" name="button1"></wm-button>
+                <wm-button class="btn-default" caption="Submit" type="button" margin="unset 0.5em" name="button1" on-click="Variables.resetPassword.invoke()"></wm-button>
             </wm-container>
             <wm-container name="container4" show="bind:Variables.ValidateToken.dataSet.value === 0">
                 <wm-label padding="unset 0.5em" name="label3" caption="Token Expire Please contact Admin"></wm-label>
