--- a/src/main/webapp/pages/ResetPassword/ResetPassword.html
+++ b/src/main/webapp/pages/ResetPassword/ResetPassword.html
@@ -1,18 +1,24 @@
 <wm-page data-ng-controller="ResetPasswordPageController" pagetitle="Reset Password" name="page1">
     <wm-content name="content1">
         <wm-page-content columnwidth="12" name="page_content1">
-            <wm-container name="container3" show="bind:Variables.ValidateToken.dataSet.value === 1">
-                <wm-composite name="composite1">
-                    <wm-label class="col-md-3 control-label" name="label1" caption="New Password"></wm-label>
-                    <wm-container class="col-md-9" name="container1">
-                        <wm-text name="Passwordtxt" placeholder="Enter Password"></wm-text>
-                    </wm-container>
-                </wm-composite>
-                <wm-button class="btn-default" caption="Submit" type="button" margin="unset 0.5em" name="button1" on-click="Variables.resetPassword.invoke()"></wm-button>
-            </wm-container>
-            <wm-container name="container4" show="bind:Variables.ValidateToken.dataSet.value === 0">
-                <wm-label padding="unset 0.5em" name="label3" caption="Token Expire Please contact Admin"></wm-label>
-            </wm-container>
+            <wm-layoutgrid name="layoutgrid1">
+                <wm-gridrow name="gridrow1" padding="5em unset">
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn1"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn5">
+                        <wm-text name="Passwordtxt" placeholder="Enter New Password" type="password" show="bind:Variables.ValidateToken.dataSet.value === 1"></wm-text>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn2">
+                        <wm-button class="btn-default" caption="Submit" type="button" margin="unset 0.5em" name="button1" on-click="Variables.resetPassword.invoke()" show="bind:Variables.ValidateToken.dataSet.value === 1"></wm-button>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow2">
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn3"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn6" horizontalalign="center">
+                        <wm-label padding="unset 0.5em" name="label3" caption="Invalid Token, Please contact Admin" show="bind:Variables.ValidateToken.dataSet.value === 0" fontweight="bold" fontsize="20"></wm-label>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn4"></wm-gridcolumn>
+                </wm-gridrow>
+            </wm-layoutgrid>
         </wm-page-content>
     </wm-content>
 </wm-page>
