New files added - [] Files modified - [ResetPassword.html] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/ResetPassword/ResetPassword.html
+++ b/src/main/webapp/pages/ResetPassword/ResetPassword.html
@@ -2,13 +2,20 @@
     <wm-content name="content1">
         <wm-page-content columnwidth="12" name="page_content1">
             <wm-layoutgrid name="layoutgrid1">
-                <wm-gridrow name="gridrow1" padding="5em unset">
+                <wm-gridrow name="gridrow3" padding="2em unset">
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn7"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn8" horizontalalign="center">
+                        <wm-picture name="picture1" width="150pt" height="150pt" picturesource="resources/images/imagelists/CX-Logo.png"></wm-picture>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn9"></wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow1" padding="2em unset">
                     <wm-gridcolumn columnwidth="4" name="gridcolumn1"></wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn5">
                         <wm-text name="Passwordtxt" placeholder="Enter New Password" type="password" show="bind:Variables.ValidateToken.dataSet.value === 1"></wm-text>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn2">
-                        <wm-button class="btn-default" caption="Submit" type="button" margin="unset 0.5em" name="button1" on-click="Variables.resetPassword.invoke()" show="bind:Variables.ValidateToken.dataSet.value === 1"></wm-button>
+                        <wm-button class="btn-default btn-primary" caption="Submit" type="button" margin="unset 0.5em" name="button1" on-click="Variables.resetPassword.invoke()" show="bind:Variables.ValidateToken.dataSet.value === 1"></wm-button>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow2">
