--- a/src/main/webapp/pages/MunicipalityAdministration/MunicipalityAdministration.html
+++ b/src/main/webapp/pages/MunicipalityAdministration/MunicipalityAdministration.html
@@ -117,7 +117,21 @@
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow9">
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn20"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn20" padding="2em unset" horizontalalign="center">
+                        <wm-tile width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_ManageMuncipalityGroups.invoke()" name="tile8">
+                            <wm-layoutgrid height="100%" name="layoutgrid9">
+                                <wm-gridrow height="100%" name="gridrow13">
+                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2em unset unset unset" class="col-xs-3" name="gridcolumn30">
+                                        <wm-icon iconsize="3em" iconclass="wi wi-group-work" name="icon8"></wm-icon>
+                                    </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="9" padding="2em unset unset unset" horizontalalign="center" class="col-xs-9" name="gridcolumn31">
+                                        <wm-label caption="Manage Groups" class="p" fontsize="1.5" fontunit="em" name="label14"></wm-label>
+                                        <wm-label caption="bind:Variables.UserSubscriptionsCountForMunicipality.dataSet[$i].userSubscriptionsCountForMunicipality" fontsize="3" fontunit="em" class="p" name="label15"></wm-label>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                            </wm-layoutgrid>
+                        </wm-tile>
+                    </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn21"></wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn22"></wm-gridcolumn>
                 </wm-gridrow>
