New files added - [] Files modified - [MunicipalityAdministration.html,index.html] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/MunicipalityAdministration/MunicipalityAdministration.html
+++ b/src/main/webapp/pages/MunicipalityAdministration/MunicipalityAdministration.html
@@ -56,7 +56,7 @@
                         </wm-tile>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn19" horizontalalign="center" padding="2em unset">
-                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary">
+                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_ManageForms.invoke()">
                             <wm-layoutgrid height="100%" name="layoutgrid4">
                                 <wm-gridrow height="100%" name="gridrow8_1">
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2em unset unset unset" name="gridcolumn20_1" class="col-xs-3">
