New files added - [FormCategoryMappingService.java,FormCategoryMappingController.java,FormCategoryMapping.java,FormCategoryMappingServiceImpl.java,FormCategoryMappingDao.java,EditForm.js,EditForm.css,EditForm.html,EditForm.variables.json,EditForm] Files modified - [ManageForms.js,cx2_published_dataModel.json,cx2-queries.hbm.xml,FormTypesServiceImpl.java,MunicipalityGroupsController.java,DataEntry.html,FormTypesController.java,ManageForms.css,FormTypesService.java,FormTypes.java,UsersController.java,StatesServiceImpl.java,FormCategoriesController.java,servicedef.xml,MunicipalityGroupMembersController.java,FormCategoriesServiceImpl.java,FormCategoriesService.java,FormCategories.java,DataEntry.variables.json,UsersServiceImpl.java,MunicipalitiesServiceImpl.java,db-connection-settings.json,ManageForms.html,Main.variables.json,pages-config.json,ManageForms.variables.json,app.variables.json] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/DataEntry/DataEntry.html
+++ b/src/main/webapp/pages/DataEntry/DataEntry.html
@@ -433,7 +433,15 @@
                                         <wm-form-field name="municipalities" displayname="Municipalities" show="true" primary-key="false" generator="assigned" key="municipalities" type="list" is-related="true" widget="select" placeholder="Select value" displayexpression="municipalityName"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn name="gridcolumn1" columnwidth="6">
-                                        <wm-form-field name="pageName" displayname="Page Name" show="true" primary-key="false" generator="assigned" key="pageName" type="string" widget="text" maxchars="255"></wm-form-field>
+                                        <wm-form-field name="pageName" displayname="Page Name" show="true" primary-key="false" generator="assigned" key="pageName" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                                <wm-gridrow name="gridrow1">
+                                    <wm-gridcolumn name="gridcolumn1" columnwidth="6">
+                                        <wm-form-field name="municipalityInternalForm" displayname="Municipality Internal Form" show="true" primary-key="false" generator="assigned" key="municipalityInternalForm" type="boolean" widget="checkbox"></wm-form-field>
+                                    </wm-gridcolumn>
+                                    <wm-gridcolumn name="gridcolumn2" columnwidth="6">
+                                        <wm-form-field name="createdDate" displayname="Created Date" show="true" primary-key="false" generator="assigned" key="createdDate" type="date" widget="date"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
