--- a/src/main/webapp/pages/ManageForms/ManageForms.html
+++ b/src/main/webapp/pages/ManageForms/ManageForms.html
@@ -24,7 +24,43 @@
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow2">
-                    <wm-gridcolumn columnwidth="12" name="gridcolumn3"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn3" padding="unset 5em">
+                        <wm-panel iconclass="wi wi-pages" name="panelManageForms" title="Manage Forms" class="pColor">
+                            <wm-layoutgrid name="layoutgrid3">
+                                <wm-gridrow name="gridrow5">
+                                    <wm-gridcolumn columnwidth="4" name="gridcolumn7"></wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="4" name="gridcolumn8"></wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="4" name="gridcolumn11" padding="unset 1em unset unset">
+                                        <wm-search name="searchForm" placeholder="Start typing..."></wm-search>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                                <wm-gridrow name="gridrow6">
+                                    <wm-gridcolumn columnwidth="12" name="gridcolumn9" padding="2em unset">
+                                        <wm-livelist listclass="list-group" template="true" itemsperrow="xs-1 sm-2 md-3 lg-4" class="list-card" dataset="bind:Variables.Cx2FormTypesData.dataSet" navigation="Basic" name="livelist1" nodatamessage="No forms found">
+                                            <wm-listtemplate layout="media" name="listtemplate1">
+                                                <wm-card name="card1">
+                                                    <wm-card-content fontsize="0.8" fontunit="em" name="card_content1">
+                                                        <wm-layoutgrid columns="2" name="layoutgrid2">
+                                                            <wm-gridrow name="gridrow4_1">
+                                                                <wm-gridcolumn colwidth="6" columnwidth="12" padding="unset 1.25em" class="col-xs-6" name="gridcolumn6">
+                                                                    <wm-label name="Name" caption="bind:Variables.Cx2FormTypesData.dataSet.formType" fontunit="em" color="#000" class="h4" margin="0px unset" whitespace="nowrap"></wm-label>
+                                                                    <wm-label name="JobTitle" caption="bind:&quot;Created On :&quot;+(Variables.Cx2FormTypesData.dataSet.data[$i].createdDate | toDate: 'dd MMMM, yyyy')" class="p text-muted" margin="0px unset unset unset"
+                                                                    whitespace="nowrap"></wm-label>
+                                                                    <wm-anchor name="PhoneNumber" caption="" class="h5" hyperlink="tel:" margin="0px unset" whitespace="nowrap"></wm-anchor>
+                                                                    <wm-anchor name="EmailID" class="p text-muted" hyperlink="mailto://" caption="" whitespace="nowrap"></wm-anchor>
+                                                                    <wm-button class="btn-default pull-right" caption="" type="button" name="buttonEdit" iconclass="wi wi-mode-edit" on-click="Variables.goToPage_EditForm.invoke()"></wm-button>
+                                                                </wm-gridcolumn>
+                                                            </wm-gridrow>
+                                                        </wm-layoutgrid>
+                                                    </wm-card-content>
+                                                </wm-card>
+                                            </wm-listtemplate>
+                                        </wm-livelist>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                            </wm-layoutgrid>
+                        </wm-panel>
+                    </wm-gridcolumn>
                 </wm-gridrow>
             </wm-layoutgrid>
         </wm-page-content>
